runtime_c__TmPnt_ThreadLocal: CMakeLists.txt中_cxx__test_main_linkStaticArch.elf修复

--- a/runtime_c__TmPnt_ThreadLocal/CMakeLists.txt
+++ b/runtime_c__TmPnt_ThreadLocal/CMakeLists.txt
@@ -78,14 +78,16 @@ target_link_libraries(_c__test_main_linkStaticArch.elf PRIVATE
 # _cxx__test_main_linkStaticArch.elf 开始
 # 示范 c++如何 使用 libclangPlgVar_runtime_c_TmPnt_ThrLcl.a
 set(_cxx_LinkStaticArch__SOURCES
-"${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/rntm_c__TmPnt_ThrLcl.c"
 "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/TestMain_CXX.cpp"
 )
 add_executable(_cxx__test_main_linkStaticArch.elf
 ${_cxx_LinkStaticArch__SOURCES}
 )
-target_include_directories( _cxx__test_main_linkStaticArch.elf
-PRIVATE
+target_include_directories( _cxx__test_main_linkStaticArch.elf  PRIVATE
 "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/include"
+)
+#指定链接静态库 libclangPlgVar_runtime_c_TmPnt_ThrLcl.a
+target_link_libraries(_c__test_main_linkStaticArch.elf  PRIVATE
+/fridaAnlzAp/clang-var/runtime_c__TmPnt_ThreadLocal/cmake-build-debug/libclangPlgVar_runtime_c_TmPnt_ThrLcl.a
 )
 # _cxx__test_main_linkStaticArch.elf 结束
