[2] c运行时 添加字段 时刻点TmPnt

--- a/runtime_c__vars_fn/CMakeLists.txt
+++ b/runtime_c__vars_fn/CMakeLists.txt
@@ -24,6 +24,7 @@ set(runtime_c__SOURCES
 "/app/antirez--sds/sds.c"
 )
 
+#测试main 开始
 add_executable(
 runtime_c__test_main
   ${runtime_c__SOURCES}
@@ -33,6 +34,7 @@ target_include_directories(
 runtime_c__test_main
     PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__vars_fn/include"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/include"
     "/app/clibs--list/src"
     "/app/antirez--sds/"
 )
@@ -40,8 +42,9 @@ target_link_libraries(
 runtime_c__test_main
     "/app/clibs--list/build/libclibs_list.a"
 )
+#测试main 结束
 
-
+#静态库 开始
 # 添加静态库目标
 add_library(clangPlgVar_runtime_c STATIC
     "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__vars_fn/runtime_c__vars_fn.c"
@@ -57,6 +60,6 @@ target_include_directories(clangPlgVar_runtime_c
     "/app/clibs--list/src"
     "/app/antirez--sds/"
     )
-
+#静态库 结束
 
 
