[3] c运行时 添加字段 时刻点TmPnt

--- a/runtime_c__vars_fn/CMakeLists.txt
+++ b/runtime_c__vars_fn/CMakeLists.txt
@@ -24,6 +24,9 @@ set(runtime_c__SOURCES
 "/app/antirez--sds/sds.c"
 )
 
+#本c运行时 依赖模块 runtime_c__TmPnt_ThreadLocal 的头文件路径
+set(runtime_c__TmPnt_ThreadLocal__include "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/include")
+
 #测试main 开始
 add_executable(
 runtime_c__test_main
@@ -34,13 +37,14 @@ target_include_directories(
 runtime_c__test_main
     PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__vars_fn/include"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/include"
+    "${runtime_c__TmPnt_ThreadLocal__include}"
     "/app/clibs--list/src"
     "/app/antirez--sds/"
 )
 target_link_libraries(
 runtime_c__test_main
     "/app/clibs--list/build/libclibs_list.a"
+    "/fridaAnlzAp/clang-var/runtime_c__TmPnt_ThreadLocal/build/libclangPlgVar_runtime_c_TmPnt_ThrLcl.a"
 )
 #测试main 结束
 
@@ -56,7 +60,7 @@ target_include_directories(clangPlgVar_runtime_c
     PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__vars_fn/include"
 #本c运行时 依赖模块 runtime_c__TmPnt_ThreadLocal， 所以依赖 本c运行时 的应用 一定要添加依赖 runtime_c__TmPnt_ThreadLocal
-    "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/include"
+    "${runtime_c__TmPnt_ThreadLocal__include}"
     "/app/clibs--list/src"
     "/app/antirez--sds/"
     )
