[3] c++运行时 添加字段 时刻点TmPnt

--- a/runtime_cpp__vars_fn/CMakeLists.txt
+++ b/runtime_cpp__vars_fn/CMakeLists.txt
@@ -9,6 +9,11 @@ set(runtime_cpp__SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_cpp__vars_fn/TestMain_Cpp.cpp"
 )
 
+#本c运行时 依赖模块 runtime_c__TmPnt_ThreadLocal 的头文件路径
+set(runtime_c__TmPnt_ThreadLocal__include "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/include")
+#本c运行时 依赖模块 runtime_c__TmPnt_ThreadLocal 的静态库路径
+set(runtime_c__TmPnt_ThreadLocal__staticLib "/fridaAnlzAp/clang-var/runtime_c__TmPnt_ThreadLocal/build/libclangPlgVar_runtime_c_TmPnt_ThrLcl.a")
+
 #测试main 开始
     add_executable(
     runtime_cpp__test_main
@@ -19,8 +24,13 @@ set(runtime_cpp__SOURCES
     runtime_cpp__test_main
       PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_cpp__vars_fn/include"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/include"
+    "${runtime_c__TmPnt_ThreadLocal__include}"
     )
+
+target_link_libraries(
+runtime_c__test_main
+    "${runtime_c__TmPnt_ThreadLocal__staticLib}"
+)
 #测试main 结束
 
 #静态库 开始
@@ -34,6 +44,6 @@ target_include_directories(clangPlgVar_runtime_cxx
         PUBLIC
         "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_cpp__vars_fn/include"
 #本c++运行时 依赖模块 runtime_c__TmPnt_ThreadLocal， 所以依赖 本c++运行时 的应用 一定要添加依赖 runtime_c__TmPnt_ThreadLocal
-        "${CMAKE_CURRENT_SOURCE_DIR}/../runtime_c__TmPnt_ThreadLocal/include"
+        "${runtime_c__TmPnt_ThreadLocal__include}"
         )
 #静态库 结束
