--- a/ZzPlugin/CMakeLists.txt
+++ b/ZzPlugin/CMakeLists.txt
@@ -3,18 +3,18 @@
 
 
 set(Var_SOURCES
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarAstAct.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/VarAstAct.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/ASTContextUtil.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/StrUtil.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/LocId.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/FnVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/RetVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarDeclVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/RangeHasMacroAstVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/CollectIncMacro_PPCb.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarAstCnsm.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/FnVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/RetVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/VarDeclVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/RangeHasMacroAstVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/CollectIncMacro_PPCb.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/VarAstCnsm.cpp"
 )
 
 
