--- a/ZzPlugin/CMakeLists.txt
+++ b/ZzPlugin/CMakeLists.txt
@@ -20,17 +20,17 @@ set(Var_SOURCES
 
     # Create a library corresponding to 'plugin'
     add_library(
-            VarPlugin
+            ZzPlugin
       SHARED
       ${Var_SOURCES}
       )
 
-target_link_libraries(VarPlugin
+target_link_libraries(ZzPlugin
         "${LIBFMT_STATIC}"   #/pubx/fmt/build/libfmt.a
         )
 
     # Configure include directories for 'plugin'
-    target_include_directories(VarPlugin
+    target_include_directories(ZzPlugin
       PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/../include"
     "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/include"
