clang-var --> clp-zz

--- a/TestAlone/CMakeLists.txt
+++ b/TestAlone/CMakeLists.txt
@@ -1,10 +1,10 @@
 
 
 MESSAGE("CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
-#CMAKE_SOURCE_DIR: /pubx/clang-var/
+#CMAKE_SOURCE_DIR: /pubx/clp-zz/
 
 MESSAGE("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
-#CMAKE_CURRENT_SOURCE_DIR: /pubx/clang-var/tools
+#CMAKE_CURRENT_SOURCE_DIR: /pubx/clp-zz/tools
 
 set(TestAlone_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../TestAlone/TestAloneMain.cpp"
@@ -27,7 +27,7 @@ set(TestAlone_SOURCES
     TestAlone
       PRIVATE
     "${LIBFMT_INCLUDE}"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../include"  # == /fridaAnlzAp/clang-var/include
+    "${CMAKE_CURRENT_SOURCE_DIR}/../include"  # == /fridaAnlzAp/clp-zz/include
     "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/include/"
     )
 
