--- a/test_in/CMakeLists.txt
+++ b/test_in/CMakeLists.txt
@@ -4,7 +4,8 @@ MESSAGE("CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
 MESSAGE("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(TestIn_SOURCES
-"${CMAKE_CURRENT_SOURCE_DIR}/../test_in/test_main.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../test_in/test_main.cpp"
+    MyClz.cpp
 )
 
 add_executable(
