--- a/ZzPlugin/CMakeLists.txt
+++ b/ZzPlugin/CMakeLists.txt
@@ -1,14 +1,13 @@
 # THE LIST OF PLUGINS AND THE CORRESPONDING SOURCE FILES
 # ======================================================
 
+#导入变量 base_util__SOURCES
+include("${CMAKE_CURRENT_SOURCE_DIR}/../base_home/base_util.cmake")
 
 set(Var_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/ZzAstAct.cpp"
 
-"${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/Util.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/ASTContextUtil.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/StrUtil.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/LocId.cpp"
+"${base_util__SOURCES}"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/FnVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/RetVst.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/VarDeclVst.cpp"
