--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,4 @@ add_subdirectory(ZzPlugin)
 add_subdirectory(ZzAlone)
 add_subdirectory(TestAlone)
 add_subdirectory(test_in)
+add_subdirectory(base_home)
