--- a/VarAlone/CMakeLists.txt
+++ b/VarAlone/CMakeLists.txt
@@ -11,15 +11,15 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/../base_home/base_util.cmake")
 
 set(ZzAlone_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/../base_home/impl/base/ActMain.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../ZzAlone/VarMain.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../VarAlone/VarMain.cpp"
 
 "${base_util__SOURCES}"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/FnVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/RetVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/VarDeclVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/RangeHasMacroAstVst.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/CollectIncMacro_PPCb.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Zz/ZzAstCnsm.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/FnVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/RetVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarDeclVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/RangeHasMacroAstVst.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/CollectIncMacro_PPCb.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/../lib/Var/VarAstCnsm.cpp"
 )
 
     # Create a library corresponding to 'plugin'
